--- a/report.html
+++ b/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,50360],[[4,5,6,0,[],[0,15,50343],[[7,8,9,0,[],[0,23,50333],[],[[10,0,1,11,[],[1,686,9529],[]],[12,0,1,0,[],[0,10218,40137,13],[]]],[],[2,1,2,1]]],[],[],[2,1,2,1]]],[],[],[2,1,2,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,101341],[[4,5,6,0,[],[1,20,101316],[[7,8,9,0,[],[1,24,101310],[],[[10,0,1,11,[],[1,809,13386],[]],[12,0,1,13,[],[1,14195,6051],[]],[14,0,1,15,[],[1,20247,10369],[]],[16,0,1,17,[],[1,30616,10822],[]],[18,0,1,19,[],[1,41440,5909],[]],[20,0,1,21,[],[1,47350,2460],[]],[22,0,1,23,[],[1,49811,5857],[]],[24,0,1,25,[],[1,55670,45663],[]]],[],[8,8,8,8]]],[],[],[8,8,8,8]]],[],[],[8,8,8,8]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Enabill 4.5 1","*D:\\OneDrive - Envecon\\All Envecon Project Data\\Automation Testing\\Robot Freamwork\\Softwares\\workspace\\Enabill_4.5 1","*.","*Robot Script Library","*D:\\OneDrive - Envecon\\All Envecon Project Data\\Automation Testing\\Robot Freamwork\\Softwares\\workspace\\Enabill_4.5 1\\Robot_Script_Library","*Robot_Script_Library","*Receipt Test","*D:\\OneDrive - Envecon\\All Envecon Project Data\\Automation Testing\\Robot Freamwork\\Softwares\\workspace\\Enabill_4.5 1\\Robot_Script_Library\\Receipt Test.robot","*Robot_Script_Library/Receipt%20Test.robot","*Tc001","*<p>Check if the user can create an invoice for the provided booking.\x3c/p>\n<ul>\n<li>User searches for \"Manual Invoice Requests\" and navigates to the page.\x3c/li>\n\x3c/ul>","*TC006","*Element '50' not visible after 10 seconds."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Enabill 4.5 1","*D:\\OneDrive - Envecon\\All Envecon Project Data\\Automation Testing\\Robot Freamwork\\Softwares\\workspace\\Enabill_4.5 1","*.","*Robot Script Library","*D:\\OneDrive - Envecon\\All Envecon Project Data\\Automation Testing\\Robot Freamwork\\Softwares\\workspace\\Enabill_4.5 1\\Robot_Script_Library","*Robot_Script_Library","*Manual Invoice Requests Test","*D:\\OneDrive - Envecon\\All Envecon Project Data\\Automation Testing\\Robot Freamwork\\Softwares\\workspace\\Enabill_4.5 1\\Robot_Script_Library\\Manual Invoice Requests Test.robot","*Robot_Script_Library/Manual%20Invoice%20Requests%20Test.robot","*Tc001-Login and Navigate to Manual Invoice Requests","*<p>Check if the user can log in to the Enabill system with valid credentials and navigate to the \"Manual Invoice Requests\" page\x3c/p>","*TC002 - Filter Invoice by BL Number","*<p>Check if the user can filter invoices by entering the BL number.\x3c/p>","*TC003 - Add New Event/Trigger for the Booking","eNpdj0sOgzAMRPc9hcUB4AKITfddVOoBQjIpFsFB+aAevylQqrKxbGnmzbidu+sAPRJbSgMoRwTSSkgHqAQqG8viWYOsD6tkDn5hA0O99yPLs26bubu02ZXhuHusBMd6jORldShTxDmlcioxFKGCHhAP4g4iyVNfzLy5qjss3XxFluFMSSnwX0KEg05xawQxHz8WSDqoUU1n9BnyX1PwSnvP+qtsyltvNgFlIA==","*TC004 - Verify Invoice Details Screen","*<p>Check if the system can display all charges for the booking/cycle.\x3c/p>","*TC005 - Retrieve Invoice Number and Request ID","*<p>Check if the user can successfully create an invoice and retrieve the invoice number and request ID from which the invoice is generated\x3c/p>","*TC006 - Logout and Close Browser","*<p>After successfully creating an invoice, the user should be able to log out and close the browser.\x3c/p>","*TC007 - Re-login to Enabill System","*<p>Check if the user can log in again to the Enabill system after logging out.\x3c/p>","*TC008 - Full Settlement for Created Invoice","*<p>Check if the user can perform full settlement for the created invoice, from receipt screen\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:50","fail":1,"label":"Critical Tests","pass":1},{"elapsed":"00:00:50","fail":1,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:50","fail":1,"id":"s1","label":"Enabill 4.5 1","name":"Enabill 4.5 1","pass":1},{"elapsed":"00:00:50","fail":1,"id":"s1-s1","label":"Enabill 4.5 1.Robot Script Library","name":"Robot Script Library","pass":1},{"elapsed":"00:00:50","fail":1,"id":"s1-s1-s1","label":"Enabill 4.5 1.Robot Script Library.Receipt Test","name":"Receipt Test","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:01:41","fail":0,"label":"Critical Tests","pass":8},{"elapsed":"00:01:41","fail":0,"label":"All Tests","pass":8}],[],[{"elapsed":"00:01:41","fail":0,"id":"s1","label":"Enabill 4.5 1","name":"Enabill 4.5 1","pass":8},{"elapsed":"00:01:41","fail":0,"id":"s1-s1","label":"Enabill 4.5 1.Robot Script Library","name":"Robot Script Library","pass":8},{"elapsed":"00:01:41","fail":0,"id":"s1-s1-s1","label":"Enabill 4.5 1.Robot Script Library.Manual Invoice Requests Test","name":"Manual Invoice Requests Test","pass":8}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1723814358327;
+window.output["baseMillis"] = 1724523740294;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 50371;
+window.output["generated"] = 101367;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
